--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="christy.jpg" alt="text">
                     <h3>Game Designer | ChatBot Developer | UX/UI Desginer</h3>
                     <div>
-                        <a href="https://www.instagram.com/dragon_8_shooter/">
+                        <a href="https://www.google.com/intl/en-GB/gmail/about/">
                                 <i  class="fab fa-instagram"></i>
                         </a>
                         <a href="https://www.facebook.com/christy.varghese.5667">
